lab-ocp-06/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      targetPort: 8778
  selector:
    app: helloworld
    deploymentconfig: helloworld
